k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arm-support-service
  namespace: arm-support
  labels:
    app: arm-support-service
spec:
  type: ClusterIP
  selector:
    app: arm-support-service
  ports:
    - name: http
      port: 80
      targetPort: 8082
